<resources>
    <string name="app_name">Smart Storage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Manual Copy</string>
    <string name="action_inference">Prefetch Data</string>
    <string name="action_copyfile">Delete Files</string>
    <string name="action_file">Files Details</string>
    <string name="permission_not_grant_message">One or more permission not granted. The app will
        not function correctly without the permission. To fix this go to settings -> apps -> SmartStorageApp
        and grant permission. </string>
    <string name="fit_cycling">Cycling</string>
    <string name="fit_running">Running</string>
    <string name="title_activity_copied_files">CopiedFilesActivity</string>
    <string name="title_activity_deleted_files">Deleted Files</string>
    <string name="title_activity_files_by_type">Percentage By Type</string>
    <string name="title_activity_files_details">FilesActivity</string>
    <string name="select_all">Select All</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="never_copy">Never Copy</string>
    <string name="never_delete">Never Delete</string>
    <string name="deselect_all">Deselect All</string>
</resources>
