<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/selectall"
        android:orderInCategory="100"
        android:title="@string/select_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/copyfiles"
        android:orderInCategory="100"
        android:title="@string/copy"
        app:showAsAction="never" />
    <item
        android:id="@+id/deletefiles"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/nevercopy"
        android:orderInCategory="100"
        android:title="@string/never_copy"
        app:showAsAction="never" />
    <item
        android:id="@+id/neverdelete"
        android:orderInCategory="100"
        android:title="@string/never_delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/deselectall"
        android:orderInCategory="100"
        android:title="@string/deselect_all"
        app:showAsAction="never" />



</menu>
