<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_copyfile"
        android:orderInCategory="100"
        android:title="@string/action_copyfile"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_inference"
        android:orderInCategory="100"
        android:title="@string/action_inference"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_viewFilesDetails"
        android:orderInCategory="100"
        android:title="Files Details"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_viewPercentages"
        android:orderInCategory="100"
        android:title="View Percentages"
        app:showAsAction="never" />


</menu>
